--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: mysql
     container_name: holidays-db
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=root
     ports:
@@ -10,3 +12,12 @@ services:
     volumes:
       - ./fixtures:/fixtures
       - ./mysql:/var/lib/mysql
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+    - 8085:8080
+
+volumes:
+ db_data:
+
