--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8083
-
 spring.datasource.url=jdbc:mysql://localhost:3307/holidays
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
