--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-
 server.error.include-message=always
+holidays.maxAbsence=2
