--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+			</dependencies>
 
 
 	<build>
