--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,3 +13,5 @@ spring.sql.init.mode=never
 logging.level.org.hibernate.tool.schema.internal.ExceptionHandlerLoggedImpl=off
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+server.error.include-message=always
