--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 server.error.include-message=always
 holidays.maxAbsence=2
+
+non-working-days-client.baseUrl=https://calendarific.com/api/v2/holidays?
+non-working-days-client.apiKey=5b7d1f3039c481c46d91c60dfbe7310b6e24a5c7
+non-working-days-client.country=pl
+non-working-days-client.type=national
